# warehouse

./: .gitignore  Cargo.toml  README.md  Rocket.toml  start.sh
migrations/2021-03-20-103055_create_product_category/: down.sql  up.sql
src/: configuration.rs  lib.rs  schema.rs
src/mock/: connections.rs  mod.rs  transactions.rs
src/product/: mod.rs
src/product/category/: models.rs  routes.rs
src/testing/: mod.rs
