[package]
name = "warehouse"
version = "0.1.0"
authors = ["Vanio Begic <vanio.begic123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
testcontainers = "0.12.0"
diesel_migrations = "1.4.0"
rocket = "0.4.7"
serde = "1.0.125"
serde_json = "1.0.64"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json"]
